--- a/CowsAndBulls/Pages/Index.cshtml
+++ b/CowsAndBulls/Pages/Index.cshtml
@@ -7,11 +7,10 @@
 <div class="text-center">
     <div>
         <h1 class="display-4">Welcome</h1>
-        <h3 class="display-6">Cows and Bulls Game</h3>
+        <h3 class="display-6 margin_bot">Cows and Bulls Game</h3>
     </div>
     <div class="cowsandbull">
-        <input type="text" class="form-control" id="input-cab1" value=""placeholder="Enter number" required><br />
-        <button type="submit" class="btn input-cab btn-primary ">Submit</button>
+         <partial name="_inputForm"/>
     </div>
 </div>
 
